# aibrix

./: .gitignore  .golangci.yml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.gateway  Dockerfile.users  EMBEDDINGS_GUIDE.md  Makefile  PR-neuron-disaggregated-inference.md  PROJECT  README.md  build-gateawy.sh  comments.md  go.mod  go.sum  intro.md  kind-kubeconfig.yaml  package-lock.json  runtime.Dockerfile
python/aibrix/: AGENTS.md  README.md  app.py  debug-redis-deployment-workflow.md  pyproject.toml  setup.py
python/aibrix/aibrix/: __version__.py  app.py  config.py  envs.py  logger.py
python/aibrix/aibrix/batch/: README.md  __init__.py  batch_manager.py  batch_scheduler.py  constant.py  driver.py  job_driver.py  job_manager.py  job_progress_manager.py  request_proxy.py  scheduler.py  scheduling_policy.py  worker.py
python/aibrix/aibrix/batch/client/: channel.py  (+6 more)
python/aibrix/aibrix/batchAPI/: __init__.py
python/aibrix/aibrix/client/: redis.py  utils.py
python/aibrix/aibrix/context/: __init__.py  deployment_detail.py  infra.py
python/aibrix/aibrix/downloader/: __init__.py  __main__.py  base.py  entity.py  huggingface.py  s3.py  tos.py  utils.py
python/aibrix/aibrix/gpu_optimizer/: README.md  app.py
python/aibrix/aibrix/gpuoptimizer/: Dockerfile  Makefile  README.md  app.py  deployment.yaml  requirements.txt  test.py  utils.py  watch.py
python/aibrix/aibrix/loader/: file.py  stream_loader.py  utils.py
python/aibrix/aibrix/metadata/: __init__.py  app.py  logger.py  secret_gen.py  store.py
python/aibrix/aibrix/metrics/: engine_rules.py  http_collector.py  metrics.py  standard_rules.py
python/aibrix/aibrix/openai_frontend/: __init__.py  main.py
python/aibrix/aibrix/openapi/: model.py  protocol.py
python/aibrix/aibrix/runtime/: __init__.py  artifact_service.py  downloaders.py  engine_registry.py  model_runtime.py  model_runtime_api.py  model_runtime_metrics.py  test_downloaders.py
python/aibrix/aibrix/storage/: README.md  __init__.py  base.py  base2.py  factory.py  local.py  reader.py  redis.py  redis_upgrade.py  s3.py  tos.py  types.py  utils.py
python/aibrix/aibrix/uploader/: __init__.py  base.py  factory.py  s3.py  utils.py
python/aibrix/scripts/: batch_api_smoke.py  download.py  entrypoint.sh  file_api_smoke.py  format.sh  generate_secrets.py  upgrade_redis_storage.py
python/aibrix/tests/: sample_job_input.jsonl  test_downloaders.py  test_driver.py  test_e2e_openai_batch_api.py  test_embedding_integration.py  test_embedding_protocol.py  test_files_api.py  test_job_cache.py  test_job_cache_yaml_optimization.py  test_job_manager.py  test_logger.py  test_metadata_logger.py  test_metrics.py  test_metrics_passthrough_mode.py  test_multi_engine_metrics.py  test_storage.py  test_structured_logging_integration.py
python/aibrix/tests/batch/: conftest.py  test_base_job_driver.py  test_base_job_driver_concurrent.py  test_batch_api_read_flip.py  test_batch_endpoints.py  test_batch_job_store.py  test_batch_manager.py  test_batch_storage_adapter.py  test_batch_usage.py  test_concurrency_controller.py  test_deployment_driver.py  test_deployment_renderer.py  test_dispatch_engine.py  test_driver.py  test_e2e_abnormal_job_behavior.py  test_e2e_openai_batch_api.py  test_inference_client_integration.py  test_job_cache.py  test_job_cache_store.py  test_job_entity.py  test_job_manager.py  test_job_progress_tracker.py  test_job_store.py  test_k8s_deployment_runtime.py  test_k8s_job_driver.py  test_k8s_job_persistence.py  test_k8s_job_runtime.py  test_k8s_job_transformer.py  test_k8s_transformer.py  test_manifest_renderer.py  test_metastore_job_cache.py  test_mongo_job_cache.py  test_rbac_setup.py  test_redis_job_cache.py  test_redis_job_store.py  test_runtime.py  test_runtime_updater.py  test_scheduler.py  test_storage.py  test_template_registry.py  (+3 more)
python/aibrix/tests/downloader/: test_downloader_hf.py  test_downloader_s3.py  test_downloader_tos.py  test_downloader_tos_v1.py  test_downloaders.py  test_entity.py  test_utils.py
python/aibrix/tests/e2e/: README.md  __init__.py  test_batch_api.py
python/aibrix/tests/fake/: __init__.py  batch_runtime.py
python/aibrix/tests/metadata/: conftest.py  test_app_integration.py  test_batch_openai_conformance.py  test_batches_api.py  test_files_api.py  test_kopf_integration.py  test_models_api.py  test_secret_gen.py  test_users_api.py
python/aibrix/tests/metrics/: test_metrics.py  test_metrics_multi_engine.py  test_metrics_passthrough_mode.py
python/aibrix/tests/runtime/: __init__.py  test_app.py  test_artifact_service_lora_name.py  test_artifact_service_threading.py  test_engine_registry.py  test_model_runtime.py  test_model_runtime_metrics.py  test_model_runtime_reliability.py  test_resumable_downloads.py  test_runtime_downloaders_tos.py
python/aibrix/tests/storage/: README.md  conftest.py  test_base2.py  test_factory.py  test_local_storage.py  test_reader.py  test_redis_storage.py  test_s3_demo.py  test_s3_storage.py  test_small_parts_benchmark.py  test_storage.py  test_utils.py
python/aibrix/tests/uploader/: __init__.py  test_uploader_s3.py
python/aibrix_kvcache/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.py
python/aibrix_kvcache/aibrix_kvcache/: __init__.py  _custom_ops.py  cache_args.py  cache_handle.py  cache_hashable.py  cache_manager.py  config.py  envs.py  metrics.py  profiling.py  spec.py  status.py  utils.py  version.py
python/aibrix_kvcache/cmake/: utils.cmake
python/aibrix_kvcache/csrc/: cache.h  cache_kernels.cu  torch_bindings.cpp
python/aibrix_kvcache/requirements/: build.txt  core.txt  test.txt
python/aibrix_kvcache/scripts/: check_aibrix_header.py  format.sh
python/aibrix_kvcache/tests/: conftest.py  test_cache_handle.py  test_cache_manager.py  test_cache_mgr.py  test_cache_ops.py  test_common.py  test_connector_inheritance.py  test_eviction_policies.py  test_group_aware_cache_manager.py  test_group_aware_cache_mgr.py  test_key_builder.py  test_l1cache.py  test_l2cache.py  test_memory_region.py  test_tensor_pool_allocator.py
(+2208 files in other folders)
